# simorc

./: .gitignore  CLAUDE.md  pyproject.toml
context/: architecture.md  memory.md  todo.md
docs/: .gitignore  README.md  architecture.md  conf.py  index.md  overview.md  testing.md
docs/architecture/: analyzer.md  data-contracts.md  index.md  workflow.md
docs/cli/: commands.md  index.md  usage-examples.md
docs/configuration/: index.md  sim-setup.md  sweeps.md  testbenches.md  validation.md
docs/implementation/: concurrency.md  data-artifacts.md  index.md  state-management.md
example/rc/: sim_setup.yaml
example/rc/netlists/: rc_lowpass.spice
example/rc/sweeps/rc_sweep/: sweep_rc_values.yaml
example/rc/testbenches/ac/: config.yaml  tb_ac.spice.j2
example/rc/testbenches/tran/: config.yaml  tb_tran.spice.j2
example/tb_ota/: sim_setup.yaml
example/tb_ota/simulations/ac/: results.raw  tb_netlist.spice
example/tb_ota/simulations/dc/: results.raw
prototypes/: inspect_dataset.py  rc_circuit.cir  rc_circuit.raw  serialization_test.py  test_ngspice.py  xarray_aggregation.py
prototypes/serialization_tests/: test_dataset.h5  test_dataset.json  test_dataset.pkl  test_dataset_flat.nc
src/simorc/: __init__.py  config.py  generator.py  loader.py  simulation.py  status.py
src/simorc/cli/: __init__.py  commands.py  main.py  utils.py
src/simorc/templates/: parametrized_test.py.j2
tests/: test_build.py  test_config.py  test_error_handling.py  test_init.py  test_loader.py  test_rc_validation.py  test_simulation.py  test_status.py
tests/cli/: test_main.py
(+9 files in other folders)
