[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simorc"
version = "0.0.0"
authors = [
  { name="Jianxun Zhu", email="zhujianxun.bupt@gmail.com" },
]
description = "A simulation orchestration tool."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pytest>=7.0",
    "jinja2>=3.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
simorc = "simorc.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
    "myst-parser>=2.0",
]

[project.urls]
"Homepage" = "https://github.com/Jianxun/simorc"
"Bug Tracker" = "https://github.com/Jianxun/simorc/issues" 